remove height of fi for fixing overlap on small phones

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -3,7 +3,6 @@
 }
 
 #f1 {
-   height: 230px;
 	width: 100%;
 }
 
